--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -5282,7 +5282,8 @@ $image-bar-placeholder-border-color: rgba($color-body-text, 0.25);
 input[type='number'].product-form__quantity-input,
 input[type='number'].product-form__custom-property-input,
 input[type='text'].product-form__custom-property-input,
-input[type='file'].product-form__custom-property-input {
+input[type='file'].product-form__custom-property-input,
+input[type='checkbox'].product-form__custom-property-input {
   margin-bottom: 0;
 }
 
