--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -1032,6 +1032,7 @@ input[type='tel'],
 input[type='password'],
 input[type='search'],
 input[type='number'],
+input[type='checkbox'],
 input[type='file'],
 textarea,
 select {
@@ -1078,10 +1079,14 @@ input[type='number']::-webkit-outer-spin-button {
   opacity: 1;
 }
 
+/* DIEN */
 input[type='checkbox'],
 input[type='radio'] {
   display: inline-block;
   margin-right: 5px;
+  width: auto;
+  -webkit-appearance: checkbox;
+  -moz-appearance: checkbox;
 }
 
 textarea {
@@ -5288,8 +5293,7 @@ input[type='checkbox'].product-form__custom-property-input {
 }
 
 .single-option-selector__label,
-.product-form__quantity-label,
-.product-form__custom-property-label {
+.product-form__quantity-label {
   display: inline-block;
   position: absolute;
   padding: ($gutter / 2) $gutter;
@@ -5310,6 +5314,19 @@ input[type='checkbox'].product-form__custom-property-input {
   @include media-query($small) {
     font-size: rem(16);
   }
+}
+
+/* DIEN */
+.product-form__custom-property-label,
+.product-form__custom-property-checkbox-label {
+  @extend .product-form__quantity-label;
+  pointer-events: auto;
+  &::after {
+    content: '';
+  }
+}
+.product-form__custom-property-checkbox-label {
+  position: static;
 }
 
 .single-option-selector__label--hidden,
