Minor changes to label and info in custom property block

--- a/sections/product-alternate-template.liquid
+++ b/sections/product-alternate-template.liquid
@@ -317,7 +317,7 @@ Dien: Added blocks.
         {
           "type": "text",
           "id": "custom_property_name",
-          "label": "Property Name",
+          "label": "Name",
           "default": "Property1"
         },
         {
@@ -330,6 +330,7 @@ Dien: Added blocks.
             { "value": "file", "label": "File" },
             { "value": "checkbox", "label": "Checkbox" }
           ],
+          "info": "Type File only works with cart page.",
           "default": "text"
         },
         {
@@ -341,7 +342,7 @@ Dien: Added blocks.
             { "value": "positive", "label": "Positive values, including zero" },
             { "value": "all_integers", "label": "Positive and negative values, including zero" }
           ],
-          "info": "Applicable only if Type field is Number.",
+          "info": "Applicable only for type Number.",
           "default": "positive_no_zero"
         },
         {
