--- a/snippets/gift-wrapping.liquid
+++ b/snippets/gift-wrapping.liquid
@@ -31,16 +31,16 @@
   {% assign items_in_cart = cart.item_count | minus: gift_wraps_in_cart %}
 
   <!-- DIEN -->
-  {% assign gift_wrap_checkbox_id = 'gift-wrapping' %}
+  {% assign gift_wrap_checkbox_id = '#gift-wrapping' %}
   {% if settings.show_cart_drawer %}
     {% assign cart_container_selector = 'div.cart-drawer__item-list' %}
-    {% assign cart_item_class = 'cart-drawer__item-quantity' %}
+    {% assign cart_item_quantity_selector = 'input.cart-drawer__item-quantity' %}
     {% assign cart_subtotal_selector = 'span.cart-drawer__subtotal-number' %}
     {% assign cart_discount_selector = 'span[data-cart-total-discount]' %}
     {% assign cart_remove_btn_selector = 'button.cart-drawer__item-delete' %}
   {% else %}
     {% assign cart_container_selector = 'tbody[data-cart-item-list]' %}
-    {% assign cart_item_class = 'cart-item__qty-input' %}
+    {% assign cart_item_quantity_selector = 'input.cart-item__qty-input' %}
     {% assign cart_subtotal_selector = 'span.cart-footer__subtotal' %}
     {% assign cart_discount_selector = '' %}
     {% assign cart_remove_btn_selector = 'a.cart-item__remove' %}
@@ -55,11 +55,20 @@
       Shopify.Cart.DOM = Shopify.Cart.DOM || {};
 
       jQuery(function () {
+          var selectors = {
+              gift_wrap_checkbox : '{{ gift_wrap_checkbox_id }}',
+              cart_container : '{{ cart_container_selector }}',
+              cart_item_quantity : '{{ cart_item_quantity_selector }}',
+              cart_subtotal : '{{ cart_subtotal_selector }}',
+              cart_discount : '{{ cart_discount_selector }}',
+              cart_remove_btn : '{{ cart_remove_btn_selector }}'
+          };
+
           // Count items in cart (excludes gift-wrap)
           Shopify.Cart.countNoGW = function (gwKey) {
               var itemsInCart = 0;
               // Count total qty in cart for items that are not the gift wrap product
-              $('input.{{ cart_item_class }}').each(function addItems() {
+              $(selectors.cart_item_quantity).each(function addItems() {
                   console.log("this.id -> " + this.id);
                   // If gift-wrap product is in cart, then don't count its quantity
                   if (gwKey && this.id.includes(gwKey)) {
@@ -94,28 +103,28 @@
           Shopify.Cart.DOM.removeGWItem = function (gwKey) {
               this.removeSensors(gwKey);
               // Trigger Remove button to delete Gift Wrap item
-              gwKey && jQuery('#' + gwKey + ' {{ cart_remove_btn_selector }}').trigger('click');
+              gwKey && jQuery('#' + gwKey + ' ' + selectors.cart_remove_btn).trigger('click');
           };
 
           // Attention: Call this only when GW item is indeed present in the Cart
           // since it attaches a listener directly to the GW item remove button
           Shopify.Cart.DOM.attachSensors = function (gwKey, inputChangeCb, removeBtnCb) {
               console.log('Attaching GW observers...');
-              var target = document.querySelector('{{ cart_container_selector }}');
+              var target = document.querySelector(selectors.cart_container);
               var config = { childList: true };
               // Activate observer for cart's item removal or addition, enabling auto-refresh of GW qty
               this.observerItemList && this.observerItemList.observe(target, config);
               // Attach listener for qty input element change of each item, enabling auto-refresh of GW qty
-              (typeof inputChangeCb === 'function') && jQuery('{{ cart_container_selector }}').on('change.updateGiftWrapQuantity', 'input.{{ cart_item_class }}', inputChangeCb);
+              (typeof inputChangeCb === 'function') && jQuery(selectors.cart_container).on('change.updateGiftWrapQuantity', selectors.cart_item_quantity, inputChangeCb);
               // Attach listener to Gift Wrap item's remove button
-              gwKey && (typeof removeBtnCb === 'function') && jQuery('#' + gwKey).on('click.removeGWLineItem', '{{ cart_remove_btn_selector }}', removeBtnCb);
+              gwKey && (typeof removeBtnCb === 'function') && jQuery('#' + gwKey).on('click.removeGWLineItem', selectors.cart_remove_btn, removeBtnCb);
           };
 
           Shopify.Cart.DOM.removeSensors = function (gwKey) {
               console.log('Removing GW observers...');
               this.observerItemList && this.observerItemList.disconnect();
-              jQuery('{{ cart_container_selector }}').off('change.updateGiftWrapQuantity', 'input.{{ cart_item_class }}');
-              gwKey && jQuery('#' + gwKey).off('click.removeGWLineItem', '{{ cart_remove_btn_selector }}');
+              jQuery(selectors.cart_container).off('change.updateGiftWrapQuantity', selectors.cart_item_quantity);
+              gwKey && jQuery('#' + gwKey).off('click.removeGWLineItem', selectors.cart_remove_btn);
           };
 
           Shopify.Cart.GiftWrap = (function () {
@@ -271,7 +280,7 @@
           function handleRemoveGWBtn() {
               Shopify.Cart.DOM.removeSensors(Shopify.Cart.GiftWrap.DOM.getKeyEscaped());
               // Note: this does NOT trigger the "change" event on the GW checkbox
-              jQuery('#{{ gift_wrap_checkbox_id }}').prop('checked', false);
+              jQuery(selectors.gift_wrap_checkbox).prop('checked', false);
               Shopify.Cart.GiftWrap.remove($.noop);
               Shopify.Cart.GiftWrap.DOM.reset();
           }
@@ -296,7 +305,7 @@
               }
               else { // No product item in cart, remove GW item from cart
                   let gwSelector = Shopify.Cart.GiftWrap.DOM.getKeyEscaped();
-                  gwSelector && jQuery('#' + gwSelector + ' {{ cart_remove_btn_selector }}').trigger('click');
+                  gwSelector && jQuery('#' + gwSelector + ' ' + selectors.cart_remove_btn).trigger('click');
               }
           }
 
@@ -304,7 +313,7 @@
               var changed = mutations.some(function inspectMutation(m) {
                   if (m.type === 'childList') {
                       if (m.addedNodes.length || m.removedNodes.length) {
-                          if (m.target === document.querySelector('{{ cart_container_selector }}')) {
+                          if (m.target === document.querySelector(selectors.cart_container)) {
                               return true;
                           }
                       }
@@ -322,10 +331,10 @@
               var newTotalDiscountSpan = stubHTML[2];
 
               // Add GW item to Cart Drawer in DOM
-              jQuery('{{ cart_container_selector }}').prepend(giftWrapLineItem);
+              jQuery(selectors.cart_container).prepend(giftWrapLineItem);
               // Update total and discount values in DOM
-              jQuery('{{ cart_subtotal_selector }}').text(newSubtotalSpan.innerText);
-              jQuery('{{ cart_discount_selector }}').text(newTotalDiscountSpan.innerText);
+              jQuery(selectors.cart_subtotal).text(newSubtotalSpan.innerText);
+              jQuery(selectors.cart_discount).text(newTotalDiscountSpan.innerText);
 
               // Save gift wrap cart item key
               Shopify.Cart.GiftWrap.DOM.init(giftWrapLineItem.id);
@@ -339,7 +348,7 @@
 
           Shopify.Cart.DOM.init(observeItemList);
 
-          if (jQuery('#{{ gift_wrap_checkbox_id }}').prop('checked')) {
+          if (jQuery(selectors.gift_wrap_checkbox).prop('checked')) {
               Shopify.Cart.GiftWrap.init({{ items_in_cart | default: 0 }});
               Shopify.Cart.GiftWrap.DOM.init('{{ gift_wraps_in_cart_key | default: "" }}');
               updateGiftWrapQuantity();
@@ -351,19 +360,20 @@
               {% endif %}
           }
 
-          var setGiftWrapCb = null;
-          var removeGiftWrapCb = null;
           // If cart drawer enabled, provide callbacks to prevent GiftWrap.set/remove from loading cart page after AJAX call
-          if ('{{ settings.show_cart_drawer | default: "false" }}' === 'true') {
-              setGiftWrapCb = function () {
+          {% if settings.show_cart_drawer %}
+              var setGiftWrapCb = function () {
                   Shopify.Cart.DOM.addGWItem(insertGWItemToCartDrawer);
               };
-              removeGiftWrapCb = function () {
+              var removeGiftWrapCb = function () {
                   var key = Shopify.Cart.GiftWrap.DOM.getKeyEscaped();
                   Shopify.Cart.DOM.removeGWItem(key);
                   Shopify.Cart.GiftWrap.DOM.reset();
               };
-          }
+          {% else %}
+              var setGiftWrapCb = null;
+              var removeGiftWrapCb = null;
+          {% endif %}
 
           // When the gift-wrapping checkbox is checked or unchecked.
           // DIEN MODIFIED: to prevent double refresh of cart page in following scenario:
@@ -374,7 +384,7 @@
           // Now, we have the qty of GW product !== current total qty of products. This will trigger another cart refresh due to
           // the checks from the above if/elsif/endif block.
           // The change consists of performing a recount of total qty of items before setting the GW qty.
-          jQuery('#{{ gift_wrap_checkbox_id }}').change(function checkboxCb() {
+          jQuery(selectors.gift_wrap_checkbox).change(function checkboxCb() {
               if (jQuery(this).prop('checked')) {
                   {% if settings.gift_wrapping_cost_model == 'per_item' %}
                       var gwKey = Shopify.Cart.GiftWrap.DOM.getKey();
@@ -389,7 +399,7 @@
           });
 
           jQuery('#gift-note').on('change', function saveGWNote() {
-              var quantity  = jQuery('#{{ gift_wrap_checkbox_id }}').prop('checked') ? Shopify.Cart.GiftWrap.getQuantity() : 0;
+              var quantity  = jQuery(selectors.gift_wrap_checkbox).prop('checked') ? Shopify.Cart.GiftWrap.getQuantity() : 0;
               var note      = jQuery(this).val();
               console.log('Saving GW note...');
               jQuery.ajax({
