--- a/snippets/product-form.liquid
+++ b/snippets/product-form.liquid
@@ -5,7 +5,7 @@ Dien: Modified to support custom line item properties
     .product__add-to-cart-container {
         position: relative;
     }
-    aside.product__tooltip-quantity-in-cart {
+    .product__tooltip-quantity-in-cart {
         width: 2em;
         height: 2em;
         position: absolute;
@@ -13,16 +13,45 @@ Dien: Modified to support custom line item properties
         right: -1em;
         z-index: 999;
         border-radius: 50%;
-        background-color: orange;
+        background-color: #ffa500;
         color: #fff;
         font-size: 1.2rem;
         font-weight: 700;
         line-height: 2;
         text-align: center;
         cursor: default;
+        -webkit-transform: scale(0.1, 0.1);
+        -moz-transform: scale(0.1, 0.1);
+        -ms-transform: scale(0.1, 0.1);
+        -o-transform: scale(0.1, 0.1);
+        transform: scale(0.1, 0.1);
+        transition: transform 1s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    }
+    .product__tooltip-icon {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        fill: #ffffff;
+    }
+    .product__tooltip-number {
+        z-index: 1000;
     }
     .completely-hidden {
         display: none;
+    }
+    .scale-to-size {
+        -webkit-transform: scale(1, 1);
+        -moz-transform: scale(1, 1);
+        -ms-transform: scale(1, 1);
+        -o-transform: scale(1, 1);
+        transform: scale(1, 1);
+        -webkit-transform-origin: center;
+        -moz-transform-origin: center;
+        -ms-transform-origin: center;
+        -o-transform-origin: center;
+        transform-origin: center;
     }
 </style>
 <form class="product-form" action="/cart/add" method="post" enctype="multipart/form-data">
@@ -129,7 +158,9 @@ Dien: Modified to support custom line item properties
           </span>
           <span class="secondary-text" aria-hidden=true data-cart-secondary-submit-text>{{ 'products.product.view_cart' | t }}</span>
         </button>
-        <aside class="product__tooltip-quantity-in-cart hidden completely-hidden">-</aside>
+        {%- assign cart_type = sections.header.settings.icon | default: 'bag' -%}
+        {%- assign icon = 'icon-header-' | append: cart_type -%}
+        <aside class="product__tooltip-quantity-in-cart visually-hidden"><span class="product__tooltip-icon completely-hidden">{% include icon %}</span><span class="product__tooltip-number"></span></aside>
     </div>
     <p class="product__notification text-small text-center" data-cart-notification></p>
   </div>
@@ -159,10 +190,12 @@ Dien: Modified to support custom line item properties
 
                     // Update the quantity tooltip
                     if (total) {
-                        $('aside.product__tooltip-quantity-in-cart').removeClass('completely-hidden').text(total);
+                        $('.product__tooltip-quantity-in-cart').removeClass('visually-hidden').addClass('scale-to-size');
+                        $('.product__tooltip-quantity-in-cart .product__tooltip-number').text(total);
                     }
                     else {
-                        $('aside.product__tooltip-quantity-in-cart').addClass('completely-hidden').text('-');
+                        $('.product__tooltip-quantity-in-cart').addClass('visually-hidden').removeClass('scale-to-size');
+                        $('.product__tooltip-quantity-in-cart .product__tooltip-number').text('');
                     }
                 }
             })
@@ -176,7 +209,6 @@ Dien: Modified to support custom line item properties
         // Listens to Ajax requests to cart.  Updates tooltip if necessary.
         // Variable jQuery is used here instead of $ as some themes like Narrative augmented jQuery.
         // If augmented jQuery's ajax() was used throughout the theme, adding handlers with $ will not trigger them.
-//        console.log('[[ON]]: ajaxComplete -- outside listenToCartAjax');
         jQuery(document).on('ajaxComplete.tooltip', function listenToCartAjax(event, request, setting) {
             console.log('--> ajaxComplete Handler called. URL: ' + setting.url + ' ID: ' + setting.requestId);
             if (/cart\/(?:update|add|change|clear)/i.test(setting.url)) {
