--- a/snippets/product-form.liquid
+++ b/snippets/product-form.liquid
@@ -1,5 +1,7 @@
 {% comment %}
-Dien: Modified to support custom line item properties
+Dien:
+Added support for custom line item properties.
+Added quantity-in-cart tooltip.
 {% endcomment %}
 <style>
     .product__add-to-cart-container {
@@ -26,6 +28,39 @@ Dien: Modified to support custom line item properties
         -o-transform: scale(0.1, 0.1);
         transform: scale(0.1, 0.1);
         transition: transform 1s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    }
+    .product__tooltip-quantity-in-cart[data-has-more]:hover:before {
+        content: attr(data-more);
+        display: block;
+        position: absolute;
+        bottom: 115%;
+        left: 0%;
+        padding: 2px 6px;
+        border: 1px solid #ffa500;
+        border-radius: 4px;
+        line-height: normal;
+        font-size: 1rem;
+        font-weight: normal;
+        white-space: pre;
+        color: #4a4a4a;
+        background-color: #fff;
+    }
+    .product__tooltip-quantity-in-cart[data-has-more]:hover:after {
+        content: '';
+        display: block;
+        position: absolute;
+        bottom: 105%;
+        left: 50%;
+        width: 7px;
+        height: 7px;
+        background-color: #ffffff;
+        border-right: 1px solid #ffa500;
+        border-bottom: 1px solid #ffa500;
+        -webkit-transform: rotate(45deg);
+        -moz-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+        -o-transform: rotate(45deg);
+        transform: rotate(45deg);
     }
     .product__tooltip-icon {
         width: 100%;
@@ -160,7 +195,7 @@ Dien: Modified to support custom line item properties
         </button>
         {%- assign cart_type = sections.header.settings.icon | default: 'bag' -%}
         {%- assign icon = 'icon-header-' | append: cart_type -%}
-        <aside class="product__tooltip-quantity-in-cart visually-hidden"><span class="product__tooltip-icon completely-hidden">{% include icon %}</span><span class="product__tooltip-number"></span></aside>
+        <aside class="product__tooltip-quantity-in-cart visually-hidden" data-has-more data-more="Quantity of this product in cart"><span class="product__tooltip-icon completely-hidden">{% include icon %}</span><span class="product__tooltip-number"></span></aside>
     </div>
     <p class="product__notification text-small text-center" data-cart-notification></p>
   </div>
